--- a/src/components/Jumbotron/style.css
+++ b/src/components/Jumbotron/style.css
@@ -1,3 +1,12 @@
+.header {
+    background-color: #2c323c;
+    color: #fff;
+    min-height: 300px;
+    padding: 180px 20px;
+    padding-bottom: 140px;
+    text-align: center;
+}
+
 h2 {
-    text-align: "center",
+    text-align: "center";
 }
