--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -1,3 +1,10 @@
+.testing {
+    background: blueviolet;
+    color: white;
+    width: 100%;
+    position: fixed;
+}
+
 h2 {
     display: inline;
 }
